--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@trpc/next": "^11.4.4",
     "@trpc/react-query": "^11.4.4",
     "@trpc/server": "^11.4.4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "bcryptjs": "^3.0.2",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.4.6",
     "prisma": "^6.13.0",
     "react": "19.1.0",
